--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jszip",
-  "version": "2.2.3",
+  "name": "jszip-zipcrypto",
+  "version": "2.2.4",
   "author": "Stuart Knightley <stuart@stuartk.com>",
   "description": "Create, read and edit .zip files with Javascript http://stuartk.com/jszip",
   "scripts": {
